# wordy-backend

./: .dockerignore  .env.temp  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml
migrations/: 20260202015631_create_initial_schema.down.sql  20260202015631_create_initial_schema.sql
src/: main.rs
src/api/: mod.rs  types.rs
src/api/auth/: auth_middleware.rs  mod.rs  models.rs
src/api/handlers/: mod.rs  translate_handlers.rs  user_handlers.rs  word_pair_handlers.rs
src/api/login/: login_handlers.rs  mod.rs  models.rs
src/api/models/: translate.rs  user.rs  word_pair.rs
src/api/translate/: mod.rs  translate_handlers.rs
src/api/user/: mod.rs  models.rs  user_handlers.rs
src/api/word_pair/: mod.rs  word_pair_handlers.rs
src/application/services/: auth_service.rs  mod.rs  translate_service.rs  user_service.rs  word_pair_service.rs
src/domain/models/: mod.rs  translate.rs  user.rs  word_pair.rs
src/domain/traits/: mod.rs
src/domain/traits/crypto/: crypto.rs
src/domain/traits/repositories/: mod.rs  repository.rs  user_repository.rs  word_pair_repository.rs
src/domain/traits/translate/: translator.rs
src/infrastructure/: mod.rs
src/infrastructure/external_api/auth/: auth_requests.rs  mod.rs
src/infrastructure/external_api/translate/: translate.rs
src/infrastructure/storage/database/: mod.rs
src/infrastructure/utils/: mod.rs  password.rs
src/infrastructure/utils/convert/: datetime_to_primitive.rs  mod.rs  primitive_to_datetime.rs
src/infrastructure/utils/string/: mod.rs  to_title_case.rs
(+11 files in other folders)
